 * allow replacing POVRay textures in osm2world_definitions.inc
 * make elevation calculator configurable, default to ZeroElevationCalculator
 * bugfix in ForceEC. (duplicate points with ele) solves missing walls in POVRay
 * better minimum and maximum depths for orthographic view
 * configurable PNG output background color
 * support for entrance=*
 * code improvements (configurable Targets, toString and isEmpty for OSM data)
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.7                                                     2011-09-19 
--------------------------------------------------------------------------------
 
 * viewer: add option to choose between different elevation calculation methods
 * new ZeroElevationCalculator that sets everything to elevation 0
 * new config option createTerrain to disable terrain calculation
 * use ele tags on invisible ways and areas
 * artificial nodes in ways for better terrain elevation
 * ability to render orthographic view from north, west, or east
 * bugfix related to orthographic tile boundaries in POVRay
 * support for parameter files
 * more street furniture: advertising columns, billboards, benches
 * render handrails on steps
 * update of Osmosis lib version and support for .osm.pbf files
 * GLPbuffer for command line rendering (png output no longer requires a window)
 * filter degenerate triangles from POVRay output
 * new Exit action (menu item and shortcut)
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.6                                                     2011-05-16 
--------------------------------------------------------------------------------
 
 * fewer visual artifacts when scenes mix known and unknown ele
 * unconnected WorldObjects influence terrain triangulation
 * new WorldObject: building entrance
 * support for min_height
 * always use JOSM workaround for .osm files with generator='JOSM'